2017-11-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Use WINSOCK_API_LINKAGE consistently in WinSock headers.

	* include/winsock.h (WINSOCK_API_LINKAGE): Define, and prefix to...
	(accept, bind, closesocket, connect, ioctlsocket, inet_addr, inet_ntoa)
	(getpeername, getsockname, getsockopt, listen, recv, recvfrom, send)
	(sendto, setsockopt, shutdown, socket, gethostbyaddr, gethostbyname)
	(getservbyport, getservbyname, getprotobynumber, getprotobyname)
	(WSAStartup, WSACleanup, WSASetLastError, WSAGetLastError)
	(WSAIsBlocking, WSAUnhookBlockingHook, WSASetBlockingHook)
	(WSACancelBlockingCall, WSAAsyncGetServByName, WSAAsyncGetServByPort)
	(WSAAsyncGetProtoByName, WSAAsyncGetProtoByNumber, WSAAsyncSelect)
	(WSAAsyncGetHostByName, WSAAsyncGetHostByAddr, WSACancelAsyncRequest)
	(htonl, ntohl, htons, ntohs, select): ...these function prototypes.

	* include/winsock2.h (WINSOCK_API_LINKAGE): Remove it from...
	(LPFN_WSASTARTUP): ...this typedef; it is inappropriate.

2017-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor <wtypes.h> vs. <nspapi.h> and WinSock headers.

	* include/wtypes.h: Tidy layout; assert copyright.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them, as appropriate.
	[__NSPAPI_H_SOURCED__]: Restrict exposure of declared content to...
	[!__BLOB_DATA_TYPE_DEFINED] (BLOB, PBLOB, LPBLOB): ...these; define...
	(__BLOB_DATA_TYPE_DEFINED__): ...this internal guard; it renames...
	(__BLOB_T_DEFINED): ...this; do not define...
	(_WTYPES_H): ...this external guard.

	* include/nspapi.h: Tidy layout; assert copyright.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them, as appropriate.
	(__CSADDR_T_DEFINED): Do not define; it is no longer required.
	[__WINSOCK2_H_SOURCED__]: Restrict exposure of declared content to...
	(struct _CSADDR_INFO): ...this, as an incomplete type, along with...
	(CSADDR_INFO, PCSADDR_INFO, LPCSADDR_INFO): ...these typedefs; also...
	(SOCKET_ADDRESS, PSOCKET_ADDRESS, LPSOCKET_ADDRESS): ...define fully.